--- a/package.json
+++ b/package.json
@@ -9,8 +9,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/node": "20.6.0",
-    "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
     "eslint": "8.49.0",
@@ -21,11 +19,13 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.11.0",
-    "sharp": "^0.32.5",
-    "typescript": "5.2.2"
+    "sharp": "^0.32.5"
   },
   "devDependencies": {
+    "@types/node": "20.10.5",
+    "@types/react": "18.2.45",
     "react-typeme": "^1.0.1",
-    "tailwindcss": "^3.3.3"
+    "tailwindcss": "^3.3.3",
+    "typescript": "5.3.3"
   }
 }
